frontend/src/index.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

@theme {
  --color-background: var(--bg-app);
  --color-surface: var(--bg-surface);
  --color-border: var(--border-color);
  --color-accent: var(--accent-primary);
  --color-text-main: var(--text-main);
  --color-text-muted: var(--text-muted);

  --color-primary: var(--color-primary);
  --color-secondary: var(--color-secondary);
}

:root {
  --bg-app: #F9FAFB;
  --bg-surface: #FFFFFF;
  --border-color: #E5E7EB;
  --text-main: #111827;
  --text-muted: #6B7280;
  
  --accent-primary: #A5A3D1; 
  
  --color-primary: #A5A3D1;
  --color-secondary: #D5D5FA;
  
  --chart-axis: #D1D5DB;
  --chart-tick: #6B7280;
  --chart-cursor: #E5E7EB;
  --chart-tooltip-bg: #FFFFFF;
  --chart-tooltip-border: #E5E7EB;
  --chart-tooltip-text: #111827;
  
  --pie-1: #D5D5FA;
  --pie-2: #A5A3D1;
  --pie-3: #7A78AC;
  --pie-4: #E2E0EC;
}

.dark {
  --bg-app: #09090B; 
  --bg-surface: #121212; 
  --border-color: #27272A;
  --text-main: #FFFFFF;
  --text-muted: #A1A1AA;
  
  --accent-primary: #C1D536;
  
  --color-primary: #C1D536;
  --color-secondary: #657124;
  
  --chart-axis: #3F3F46;
  --chart-tick: #A1A1AA;
  --chart-cursor: #27272A;
  --chart-tooltip-bg: #18181B;
  --chart-tooltip-border: #27272A;
  --chart-tooltip-text: #FFFFFF;
  
  --pie-1: #657124;
  --pie-2: #C1D536;
  --pie-3: #E2FA63;
  --pie-4: #475217;
}

body {
  background-color: var(--bg-app);
  color: var(--text-main);
}

